--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-csv": "^2.2.2",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "4.4.0",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "8.0.1",
